--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@storybook/test": "^8.6.12",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/react-window": "^1.8.8",
+    "@types/react-window-infinite-loader": "^1.0.9",
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
@@ -51,9 +53,13 @@
     "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.1",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.10"
   }
 }
